Fixed overflow issue in user profile headline

--- a/wcfsetup/install/files/style/user.less
+++ b/wcfsetup/install/files/style/user.less
@@ -107,6 +107,10 @@
 		right: @wcfGapSmall;
 		top: @wcfGapSmall;
 	}
+	
+	> .dataList {
+		overflow: hidden;
+	}
 }
 
 .letters {
